--- a/less/main.less
+++ b/less/main.less
@@ -83,8 +83,8 @@
   height: 300px;
   margin-top: 20px;
   border-radius: 10px;
-  background-image: url(../images/yy.jpg);
-  background-size: cover;
+  // background-image: url(../images/yy.jpg);
+  // background-size: cover;
     
 }
 
