project front end done

--- a/css/main.css
+++ b/css/main.css
@@ -40,6 +40,12 @@
   height: 300px;
   margin-top: 20px;
   border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+.gallery_box img {
+  background-size: cover;
+  width: 400px;
+  border-radius: 10px !important;
 }
 .button_box {
   margin-left: auto;
