--- a/less/main.less
+++ b/less/main.less
@@ -36,7 +36,7 @@
   height: 600px;
   top: 200px;
   text-align: center;
-
+  
 
 }
 
@@ -83,8 +83,17 @@
   height: 300px;
   margin-top: 20px;
   border-radius: 10px;
+  box-shadow: 0 4px 6px rgba(0,0,0,.1);
   // background-image: url(../images/yy.jpg);
   // background-size: cover;
+
+  img{
+    
+    background-size: cover;
+    width: 400px;
+    border-radius: 10px !important;
+
+  }
     
 }
 
