--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@
   text-align: center;
   cursor: pointer;
 }
-.time_box span {
+.time_box .time_text {
   font-family: "lato", sans-serif;
   font-weight: 300;
   font-size: 30px;
