--- a/less/main.less
+++ b/less/main.less
@@ -58,7 +58,7 @@
   text-align: center;
   cursor: pointer;
 
-  span{
+  .time_text{
     
     font-family: "lato", sans-serif;
     font-weight: 300;
