--- a/less/main.less
+++ b/less/main.less
@@ -163,6 +163,7 @@
     -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
     box-shadow: 0 5px 10px rgba(0,0,0,.2);
     line-break: auto;
+    cursor: default;
 }
 
 
