--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,34 +6,13 @@
     <meta name="viewport" content="width=640">
 
 
-
+    
+    <% include include_public %>
 
     <!-- <link rel="stylesheet" href="stylesheets/core.css" media="screen"> -->
     <!-- <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"> -->
     
-    <link rel="icon" href="public/img/ray.ico"/>
-
-    <link rel="stylesheet" href="public/css/kit/bootstrap.min.css">
-    <link rel="stylesheet" href="public/stylesheets/github-light.css">
-    <link rel="stylesheet" href="public/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="css/kit/tooltip.css"> -->
-    <link rel="stylesheet" href="public/css/kit/animate.css">
-    <link rel="stylesheet" href="public/css/unslider.css">
-    <link rel="stylesheet" href="public/css/unslider-dots.css">
-    <link rel="stylesheet" href="public/css/star_bg.css">
-    <link rel="stylesheet" href="public/css/main.css">
-
-    
-    
-    <script type="text/javascript" src="public/js/modernizr.js"></script>
-    <script type="text/javascript" src="public/js/jquery.min.js"></script>
-    <script type="text/javascript" src="public/js/kit/bootstrap.min.js"></script>
-    <!-- <script type="text/javascript" src="js/kit/tooltip.js"></script> -->
-    <script type="text/javascript" src="public/js/unslider-min.js"></script>
-    <script type="text/javascript" src="public/js/main.js"></script>
-    
-
-    <script src="bower_components/cloudinary-jquery/cloudinary-jquery.js" type="text/javascript"></script>
+   
 
 
 
@@ -67,14 +46,16 @@
         
         <ul>
           <!-- 網路端 -->
-          <li><div class="pic_0"></li>
-          <li><div class="pic_1"></li>
-          <li><div class="pic_2"></li>
-          <li><div class="pic_3"></li>
-          <li><div class="pic_4"></li>
-          <li><div class="pic_5"></li>
-          <li><div class="pic_6"></li>
-
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463277414/ray_1_y42ybt.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248761/IMG_2692_vo4q0h.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248777/IMG_2693_olu1ni.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248759/IMG_2694_sspxuq.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248768/IMG_2695_qdixks.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248774/IMG_2696_wb6fao.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248774/IMG_2697_kdm9kd.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248776/IMG_2698_fyhsxk.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248762/IMG_2699_hzi0iq.jpg"></li>
+          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248780/IMG_2700_dbofte.jpg"></li>
 
           <!-- 本地端 -->
           <!-- <li><img src="img/IMG_2691.jpg"></li>
