index problem fixed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,16 +46,13 @@
         
         <ul>
           <!-- 網路端 -->
-          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463277414/ray_1_y42ybt.jpg"></li>
-          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248761/IMG_2692_vo4q0h.jpg"></li>
-          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248777/IMG_2693_olu1ni.jpg"></li>
-          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248759/IMG_2694_sspxuq.jpg"></li>
-          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248768/IMG_2695_qdixks.jpg"></li>
-          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248774/IMG_2696_wb6fao.jpg"></li>
-          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248774/IMG_2697_kdm9kd.jpg"></li>
-          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248776/IMG_2698_fyhsxk.jpg"></li>
-          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248762/IMG_2699_hzi0iq.jpg"></li>
-          <li><img src="http://res.cloudinary.com/ajayimgcloud/image/upload/v1463248780/IMG_2700_dbofte.jpg"></li>
+          <li><div class="pic_0"></li>
+          <li><div class="pic_1"></li>
+          <li><div class="pic_2"></li>
+          <li><div class="pic_3"></li>
+          <li><div class="pic_4"></li>
+          <li><div class="pic_5"></li>
+          <li><div class="pic_6"></li>
 
           <!-- 本地端 -->
           <!-- <li><img src="img/IMG_2691.jpg"></li>
