--- a/public/css/star_bg.css
+++ b/public/css/star_bg.css
@@ -83,3 +83,15 @@ html {
     transform: translateY(-2000px);
   }
 }
+
+
+@-webkit-keyframes animStar {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-2000px);
+  }
+}
+
+
