--- a/public/less/main.less
+++ b/public/less/main.less
@@ -126,7 +126,9 @@ body{
 
   }
 
-  .pic_0{ background-image: url(../img/miao_0.jpg); }
+  .pic_0{ background-image: url(../img/miao_0.jpg); 
+          display: none;
+        }
   .pic_1{ background-image: url(../img/miao_1.jpg); }
   .pic_2{ background-image: url(../img/miao_2.jpg); }
   .pic_3{ background-image: url(../img/miao_3.jpg); }
