--- a/views/include_public.ejs
+++ b/views/include_public.ejs
@@ -16,5 +16,6 @@
     <script type="text/javascript" src="public/js/jquery.min.js"></script>
     <script type="text/javascript" src="public/js/kit/bootstrap.min.js"></script>
     <!-- <script type="text/javascript" src="js/kit/tooltip.js"></script> -->
+    <script type="text/javascript" src="public/js/kit/jquery.preload.js"></script>
     <script type="text/javascript" src="public/js/unslider-min.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
