wrong css fixed

--- a/views/include_public.ejs
+++ b/views/include_public.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="public/css/kit/animate.css">
     <link rel="stylesheet" href="public/css/unslider.css">
     <link rel="stylesheet" href="public/css/unslider-dots.css">
-    <link rel="stylesheet" href="public/css/star_bg.css">
+    <link rel="stylesheet" href="public/css/star.css">
     <link rel="stylesheet" href="public/css/main.css">
 
     
