--- a/public/less/star.less
+++ b/public/less/star.less
@@ -167,11 +167,11 @@ html {
 }
 
 @keyframes animStar {
-  from {
+  0% {
     -webkit-transform: translateY(0px);
     transform: translateY(0px);
   }
-  to {
+  100% {
     -webkit-transform: translateY(-2000px);
     transform: translateY(-2000px);
   }
@@ -179,33 +179,33 @@ html {
 
 
 @-moz-keyframes animStar {
-  from {
+  0% {
     -webkit-transform: translatey(0px);
     transform: translatey(0px);
   }
-  to {
+  100% {
     -webkit-transform: translatey(-2000px);
     transform: translatey(-2000px);
   }
 }
 
 @-webkit-keyframes animStar {
-  from {
+  0% {
     -webkit-transform: translatey(0px);
     transform: translatey(0px);
   }
-  to {
+  100% {
     -webkit-transform: translatey(-2000px);
     transform: translatey(-2000px);
   }
 }
 
 @-o-keyframes animStar {
-  from {
+  0% {
     -webkit-transform: translatey(0px);
     transform: translatey(0px);
   }
-  to {
+  100% {
     -webkit-transform: translatey(-2000px);
     transform: translatey(-2000px);
   }
