--- a/public/css/star.css
+++ b/public/css/star.css
@@ -134,41 +134,41 @@ html {
   -webkit-text-fill-color: transparent;
 }
 @keyframes animStar {
-  from {
-    -webkit-transform: translateY(0px);
-    transform: translateY(0px);
-  }
-  to {
-    -webkit-transform: translateY(-2000px);
-    transform: translateY(-2000px);
-  }
-}
-@-moz-keyframes animStar {
-  from {
+  0% {
     -webkit-transform: translatey(0px);
     transform: translatey(0px);
   }
-  to {
+  100% {
+    -webkit-transform: translatey(-2000px);
+    transform: translatey(-2000px);
+  }
+}
+@-moz-keyframes animStar {
+  0% {
+    -webkit-transform: translatey(0px);
+    transform: translatey(0px);
+  }
+  100% {
     -webkit-transform: translatey(-2000px);
     transform: translatey(-2000px);
   }
 }
 @-webkit-keyframes animStar {
-  from {
+  0% {
     -webkit-transform: translatey(0px);
     transform: translatey(0px);
   }
-  to {
+  100% {
     -webkit-transform: translatey(-2000px);
     transform: translatey(-2000px);
   }
 }
 @-o-keyframes animStar {
-  from {
+  0% {
     -webkit-transform: translatey(0px);
     transform: translatey(0px);
   }
-  to {
+  100% {
     -webkit-transform: translatey(-2000px);
     transform: translatey(-2000px);
   }
