--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,13 +46,13 @@
         
         <ul>
           <!-- 網路端 -->
-          <li><div class="pic_0"></li>
-          <li><div class="pic_1"></li>
-          <li><div class="pic_2"></li>
-          <li><div class="pic_3"></li>
-          <li><div class="pic_4"></li>
-          <li><div class="pic_5"></li>
-          <li><div class="pic_6"></li>
+          <li><div class="pic_0 pic_grp"></li>
+          <li><div class="pic_1 pic_grp"></li>
+          <li><div class="pic_2 pic_grp"></li>
+          <li><div class="pic_3 pic_grp"></li>
+          <li><div class="pic_4 pic_grp"></li>
+          <li><div class="pic_5 pic_grp"></li>
+          <li><div class="pic_6 pic_grp"></li>
 
           <!-- 本地端 -->
           <!-- <li><img src="img/IMG_2691.jpg"></li>
