--- a/public/less/star.less
+++ b/public/less/star.less
@@ -77,6 +77,14 @@ html {
   overflow: hidden;
 }
 
+
+.noscroll {
+    position: fixed; 
+    overflow-y: scroll;
+    width: 100%;
+}
+
+
 #stars {
 
   // .animation(animStar 50s linear infinite);
