--- a/public/less/main.less
+++ b/public/less/main.less
@@ -50,7 +50,7 @@ body{
   position: absolute;
   width: 100%;
   height: 600px;
-  top: 130px;
+  top: 100px;
   text-align: center;
   
 
@@ -97,6 +97,7 @@ body{
   .center;
   .square(320px);    
   position: relative;
+  margin-top:50px;
     
   .satellite_1{
         
@@ -113,7 +114,7 @@ body{
     content: "";
     border-radius: 20px;
     transform-origin: 10px 180px;
-    animation: satellite 4s infinite linear;
+    animation: satellite 8.5s infinite linear;
     transition: all .2s ease-in-out;
 
   }
@@ -123,9 +124,9 @@ body{
       display: block;
       position: absolute;
       z-index: 2;
-      left: 0;
+      left: -3px;
       right: 0;
-      top: -10px;
+      top: -4px;
       margin: 0 auto;
       width: 10px;
       height: 10px;
@@ -145,11 +146,11 @@ body{
 
 @keyframes satellite {
   from {
-    transform: rotate(0deg);
+    transform: rotate(400deg);
   }
 
   to {
-    transform: rotate(360deg);
+    transform: rotate(40deg);
   }
 }
 
@@ -247,8 +248,8 @@ body{
 .my-popover{
 
     position: relative;
-    top: -38px;
-    left: 100px;
+    top: 0px;
+    left: 0px;
     z-index: 1060;
     display: inline-block;
     opacity: 0;
