--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,18 +80,16 @@
       <!-- 置底 -->
       <div class="button_box" href="#">
 
-          <div class="heart_fading"></div>
+          <!-- <div class="heart_fading"></div>
           <div class="heart_btn">
             <i class="fa fa-heart" aria-hidden="true"></i>
           </div>
-
+ -->
 
 
       </div>
 
-      <div class="my-popover">已留下足跡 
-        <i class="fa fa-paw" aria-hidden="true"></i>
-      </div>
+      <div class="my-popover">已留下足跡</div>
 
     </div>
 
