--- a/views/include_public.ejs
+++ b/views/include_public.ejs
@@ -25,5 +25,9 @@
     <script type="text/javascript" src="public/js/kit/jquery.transit.min.js"></script>
 
     <script type="text/javascript" src="public/js/kit/jquery.mobile-1.4.5.min.js"></script>
+
+
+    <script type="text/javascript" src="public/js/kit/hide-address-bar.js"></script>
+
     <script type="text/javascript" src="public/js/unslider-min.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
