--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,8 +3,8 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640">
-
+    <!-- <meta name="viewport" content="width=640"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
     
     <% include include_public %>
@@ -33,8 +33,19 @@
         PARALLAX PIXEL STARS
       </span>
     </div> -->
+
+    <!-- 最初的布簾 -->
+    <div class="entry_curtain">
+      
+      <div class="lodin_spinner">
+        <i class="fa fa-circle-o-notch fa-spin fa-fw" aria-hidden="true"></i>
+      </div>
+
+    </div>
+
     <div class="main_container">
       
+
       <!-- <span class="main_h1">妙真 愛老虎油～～～～～</span> -->
 
     
