--- a/public/less/main.less
+++ b/public/less/main.less
@@ -89,6 +89,42 @@ body{
 }
 
 
+//-----------  Loading Spinner  -----------//
+
+.ui-page{
+
+  height: 100%;
+
+
+}
+
+.entry_curtain{
+  
+  position: absolute;
+  width: 100%;
+  height:100%;
+  background-color: #2E3899;
+
+  font-size: 44px;
+  padding-top: 340px;
+
+  z-index: 99;
+  text-align:center;
+  color: #fff;
+  
+
+
+}
+
+
+
+.lodin_spinner {
+    // background: url("http://www.aveva.com/Images/ajax-loader.gif") no-repeat scroll center center #FFF;
+    // position: absolute;
+    // height: 100%;
+    // width: 100%;
+}
+
 
 //-----------  衛星  -----------//
 
@@ -149,20 +185,24 @@ body{
 
 @keyframes satellite {
   from {
+    -webkit-transform: rotate(400deg);
     transform: rotate(400deg);
   }
 
   to {
+    -webkit-transform: rotate(40deg);
     transform: rotate(40deg);
   }
 }
 
 @keyframes satellite_2 {
   from {
+    -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
   }
 
   to {
+    -webkit-transform: rotate(540deg);
     transform: rotate(540deg);
   }
 }
