--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
   </head>
 
   <body>
-   
+    <h1> <%= todayVisit %> </h1>
     <!-- <div id='stars'></div>
     <div id='stars2'></div>
     <div id='stars3'></div> -->
