--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,6 +69,10 @@ body {
   content: "";
   border-radius: 20px;
   transform-origin: 10px 180px;
+  -webkit-animation: satellite 15s infinite linear;
+  -moz-animation: satellite 15s infinite linear;
+  -ms-animation: satellite 15s infinite linear;
+  -o-animation: satellite 15s infinite linear;
   animation: satellite 15s infinite linear;
   transition: all 0.1s ease-in-out;
 }
@@ -86,28 +90,12 @@ body {
   content: "";
   border-radius: 20px;
   transform-origin: 5px 175px;
+  -webkit-animation: satellite_2 7s infinite linear;
+  -moz-animation: satellite_2 7s infinite linear;
+  -ms-animation: satellite_2 7s infinite linear;
+  -o-animation: satellite_2 7s infinite linear;
   animation: satellite_2 7s infinite linear;
   transition: all 0.1s ease-in-out;
-}
-@keyframes satellite {
-  from {
-    -webkit-transform: rotate(400deg);
-    transform: rotate(400deg);
-  }
-  to {
-    -webkit-transform: rotate(40deg);
-    transform: rotate(40deg);
-  }
-}
-@keyframes satellite_2 {
-  from {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  to {
-    -webkit-transform: rotate(540deg);
-    transform: rotate(540deg);
-  }
 }
 .gallery_box {
   margin-left: auto;
@@ -339,5 +327,105 @@ body {
   }
   100% {
     opacity: 1;
+  }
+}
+@-webkit-keyframes satellite {
+  from {
+    -webkit-transform: rotate(400deg);
+    transform: rotate(400deg);
+  }
+  to {
+    -webkit-transform: rotate(40deg);
+    transform: rotate(40deg);
+  }
+}
+@-moz-keyframes satellite {
+  from {
+    -webkit-transform: rotate(400deg);
+    transform: rotate(400deg);
+  }
+  to {
+    -webkit-transform: rotate(40deg);
+    transform: rotate(40deg);
+  }
+}
+@-ms-keyframes satellite {
+  from {
+    -webkit-transform: rotate(400deg);
+    transform: rotate(400deg);
+  }
+  to {
+    -webkit-transform: rotate(40deg);
+    transform: rotate(40deg);
+  }
+}
+@-o-keyframes satellite {
+  from {
+    -webkit-transform: rotate(400deg);
+    transform: rotate(400deg);
+  }
+  to {
+    -webkit-transform: rotate(40deg);
+    transform: rotate(40deg);
+  }
+}
+@keyframes satellite {
+  from {
+    -webkit-transform: rotate(400deg);
+    transform: rotate(400deg);
+  }
+  to {
+    -webkit-transform: rotate(40deg);
+    transform: rotate(40deg);
+  }
+}
+@-webkit-keyframes satellite_2 {
+  from {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+  to {
+    -webkit-transform: rotate(540deg);
+    transform: rotate(540deg);
+  }
+}
+@-moz-keyframes satellite_2 {
+  from {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+  to {
+    -webkit-transform: rotate(540deg);
+    transform: rotate(540deg);
+  }
+}
+@-ms-keyframes satellite_2 {
+  from {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+  to {
+    -webkit-transform: rotate(540deg);
+    transform: rotate(540deg);
+  }
+}
+@-o-keyframes satellite_2 {
+  from {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+  to {
+    -webkit-transform: rotate(540deg);
+    transform: rotate(540deg);
+  }
+}
+@keyframes satellite_2 {
+  from {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+  to {
+    -webkit-transform: rotate(540deg);
+    transform: rotate(540deg);
   }
 }
