--- a/public/less/main.less
+++ b/public/less/main.less
@@ -153,7 +153,18 @@ body{
     content: "";
     border-radius: 20px;
     transform-origin: 10px 180px;
-    animation: satellite 15s infinite linear;
+    
+    
+    animation-name: satellite;
+    -webkit-animation-name: satellite;
+
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+    
+    -webkit-animation-duration: 15s;
+            animation-duration: 15s;
+     
+
     transition: all .1s ease-in-out;
 
   }
@@ -173,9 +184,19 @@ body{
       content: "";
       border-radius: 20px;
       transform-origin: 5px 175px;
-      animation: satellite_2 7s infinite linear;
       transition: all .1s ease-in-out;
 
+
+
+      animation-name: satellite_2;
+      -webkit-animation-name: satellite_2;
+
+      animation-iteration-count: infinite;
+      -webkit-animation-iteration-count: infinite;
+      
+      -webkit-animation-duration: 7s;
+              animation-duration: 7s;
+
   }
 
 
@@ -183,29 +204,7 @@ body{
 }
 
 
-@keyframes satellite {
-  from {
-    -webkit-transform: rotate(400deg);
-    transform: rotate(400deg);
-  }
 
-  to {
-    -webkit-transform: rotate(40deg);
-    transform: rotate(40deg);
-  }
-}
-
-@keyframes satellite_2 {
-  from {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-
-  to {
-    -webkit-transform: rotate(540deg);
-    transform: rotate(540deg);
-  }
-}
 
 
 
@@ -415,6 +414,25 @@ body{
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .blink{
 
     animation-name: blink;
@@ -493,4 +511,136 @@ body{
     }
 }
 
+
+//--------  satellite 1 --------//
+
+
+@-webkit-keyframes satellite {
+  from {
+    -webkit-transform: rotate(400deg);
+    
+  }
+
+  to {
+    -webkit-transform: rotate(40deg);
+    
+  }
+}
+
+
+
+@-moz-keyframes satellite {
+  from {
+    -webkit-transform: rotate(400deg);
+    transform: rotate(400deg);
+  }
+
+  to {
+    -webkit-transform: rotate(40deg);
+    transform: rotate(40deg);
+  }
+}
+
+
+
+@-ms-keyframes satellite {
+  from {
+    -webkit-transform: rotate(400deg);
+    transform: rotate(400deg);
+  }
+
+  to {
+    -webkit-transform: rotate(40deg);
+    transform: rotate(40deg);
+  }
+}
+
+@-o-keyframes satellite {
+  from {
+    -webkit-transform: rotate(400deg);
+    transform: rotate(400deg);
+  }
+
+  to {
+    -webkit-transform: rotate(40deg);
+    transform: rotate(40deg);
+  }
+}
+
+@keyframes satellite {
+  from {
+    
+    transform: rotate(400deg);
+  }
+
+  to {
+    
+    transform: rotate(40deg);
+  }
+}
+
+
+
+
+//--------  satellite 2 --------//
+
+@-webkit-keyframes satellite_2 {
+  from {
+    -webkit-transform: rotate(180deg);
+    
+  }
+
+  to {
+    -webkit-transform: rotate(540deg);
+    
+  }
+}
+
+@-moz-keyframes satellite_2 {
+  from {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+
+  to {
+    -webkit-transform: rotate(540deg);
+    transform: rotate(540deg);
+  }
+}
+
+@-ms-keyframes satellite_2 {
+  from {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+
+  to {
+    -webkit-transform: rotate(540deg);
+    transform: rotate(540deg);
+  }
+}
+
+@-o-keyframes satellite_2 {
+  from {
+    -webkit-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+
+  to {
+    -webkit-transform: rotate(540deg);
+    transform: rotate(540deg);
+  }
+}
+
+@keyframes satellite_2 {
+  from {
+    
+    transform: rotate(180deg);
+  }
+
+  to {
+    
+    transform: rotate(540deg);
+  }
+}
 
