--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <!-- <meta name="viewport" content="width=640"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;" />
 
     
     <% include include_public %>
@@ -14,7 +14,7 @@
     
    
 
-
+ 
 
     <title> Linksy </title>
   </head>
