ready to get from ET

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -154,6 +154,7 @@ body{
     border-radius: 20px;
     transform-origin: 10px 180px;
     
+    display: none;
     
     animation-name: satellite;
     -webkit-animation-name: satellite;
@@ -186,7 +187,7 @@ body{
       transform-origin: 5px 175px;
       transition: all .1s ease-in-out;
 
-
+      display: none;
 
       animation-name: satellite_2;
       -webkit-animation-name: satellite_2;
