--- a/public/less/main.less
+++ b/public/less/main.less
@@ -153,21 +153,8 @@ body{
     content: "";
     border-radius: 20px;
     transform-origin: 10px 180px;
-    
-    display: none;
-    
-    animation-name: satellite;
-    -webkit-animation-name: satellite;
-
-    animation-iteration-count: infinite;
-    -webkit-animation-iteration-count: infinite;
-    
-    -webkit-animation-duration: 15s;
-            animation-duration: 15s;
-     
-
     transition: all .1s ease-in-out;
-
+    opacity: 0;
   }
 
   .satellite_2{
@@ -186,17 +173,7 @@ body{
       border-radius: 20px;
       transform-origin: 5px 175px;
       transition: all .1s ease-in-out;
-
-      display: none;
-
-      animation-name: satellite_2;
-      -webkit-animation-name: satellite_2;
-
-      animation-iteration-count: infinite;
-      -webkit-animation-iteration-count: infinite;
-      
-      -webkit-animation-duration: 7s;
-              animation-duration: 7s;
+      opacity: 0;
 
   }
 
@@ -513,135 +490,135 @@ body{
 }
 
 
-//--------  satellite 1 --------//
+// //--------  satellite 1 --------//
 
 
-@-webkit-keyframes satellite {
-  from {
-    -webkit-transform: rotate(400deg);
+// @-webkit-keyframes satellite {
+//   from {
+//     -webkit-transform: rotate(400deg);
     
-  }
+//   }
 
-  to {
-    -webkit-transform: rotate(40deg);
+//   to {
+//     -webkit-transform: rotate(40deg);
     
-  }
-}
+//   }
+// }
 
 
 
-@-moz-keyframes satellite {
-  from {
-    -webkit-transform: rotate(400deg);
-    transform: rotate(400deg);
-  }
+// @-moz-keyframes satellite {
+//   from {
+//     -webkit-transform: rotate(400deg);
+//     transform: rotate(400deg);
+//   }
 
-  to {
-    -webkit-transform: rotate(40deg);
-    transform: rotate(40deg);
-  }
-}
+//   to {
+//     -webkit-transform: rotate(40deg);
+//     transform: rotate(40deg);
+//   }
+// }
 
 
 
-@-ms-keyframes satellite {
-  from {
-    -webkit-transform: rotate(400deg);
-    transform: rotate(400deg);
-  }
+// @-ms-keyframes satellite {
+//   from {
+//     -webkit-transform: rotate(400deg);
+//     transform: rotate(400deg);
+//   }
 
-  to {
-    -webkit-transform: rotate(40deg);
-    transform: rotate(40deg);
-  }
-}
+//   to {
+//     -webkit-transform: rotate(40deg);
+//     transform: rotate(40deg);
+//   }
+// }
 
-@-o-keyframes satellite {
-  from {
-    -webkit-transform: rotate(400deg);
-    transform: rotate(400deg);
-  }
+// @-o-keyframes satellite {
+//   from {
+//     -webkit-transform: rotate(400deg);
+//     transform: rotate(400deg);
+//   }
 
-  to {
-    -webkit-transform: rotate(40deg);
-    transform: rotate(40deg);
-  }
-}
+//   to {
+//     -webkit-transform: rotate(40deg);
+//     transform: rotate(40deg);
+//   }
+// }
 
-@keyframes satellite {
-  from {
+// @keyframes satellite {
+//   from {
     
-    transform: rotate(400deg);
-  }
+//     transform: rotate(400deg);
+//   }
 
-  to {
+//   to {
     
-    transform: rotate(40deg);
-  }
-}
+//     transform: rotate(40deg);
+//   }
+// }
 
 
 
 
-//--------  satellite 2 --------//
+// //--------  satellite 2 --------//
 
-@-webkit-keyframes satellite_2 {
-  from {
-    -webkit-transform: rotate(180deg);
+// @-webkit-keyframes satellite_2 {
+//   from {
+//     -webkit-transform: rotate(180deg);
     
-  }
+//   }
 
-  to {
-    -webkit-transform: rotate(540deg);
+//   to {
+//     -webkit-transform: rotate(540deg);
     
-  }
-}
+//   }
+// }
 
-@-moz-keyframes satellite_2 {
-  from {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
+// @-moz-keyframes satellite_2 {
+//   from {
+//     -webkit-transform: rotate(180deg);
+//     transform: rotate(180deg);
+//   }
 
-  to {
-    -webkit-transform: rotate(540deg);
-    transform: rotate(540deg);
-  }
-}
+//   to {
+//     -webkit-transform: rotate(540deg);
+//     transform: rotate(540deg);
+//   }
+// }
 
-@-ms-keyframes satellite_2 {
-  from {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
+// @-ms-keyframes satellite_2 {
+//   from {
+//     -webkit-transform: rotate(180deg);
+//     transform: rotate(180deg);
+//   }
 
-  to {
-    -webkit-transform: rotate(540deg);
-    transform: rotate(540deg);
-  }
-}
+//   to {
+//     -webkit-transform: rotate(540deg);
+//     transform: rotate(540deg);
+//   }
+// }
 
-@-o-keyframes satellite_2 {
-  from {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
+// @-o-keyframes satellite_2 {
+//   from {
+//     -webkit-transform: rotate(180deg);
+//     transform: rotate(180deg);
+//   }
 
-  to {
-    -webkit-transform: rotate(540deg);
-    transform: rotate(540deg);
-  }
-}
+//   to {
+//     -webkit-transform: rotate(540deg);
+//     transform: rotate(540deg);
+//   }
+// }
 
-@keyframes satellite_2 {
-  from {
+// @keyframes satellite_2 {
+//   from {
     
-    transform: rotate(180deg);
-  }
+//     transform: rotate(180deg);
+//   }
 
-  to {
+//   to {
     
-    transform: rotate(540deg);
-  }
-}
+//     transform: rotate(540deg);
+//   }
+// }
 
