--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,14 +69,8 @@ body {
   content: "";
   border-radius: 20px;
   transform-origin: 10px 180px;
-  display: none;
-  animation-name: satellite;
-  -webkit-animation-name: satellite;
-  animation-iteration-count: infinite;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-duration: 15s;
-  animation-duration: 15s;
   transition: all 0.1s ease-in-out;
+  opacity: 0;
 }
 .satellite_box .satellite_2 {
   display: block;
@@ -93,13 +87,7 @@ body {
   border-radius: 20px;
   transform-origin: 5px 175px;
   transition: all 0.1s ease-in-out;
-  display: none;
-  animation-name: satellite_2;
-  -webkit-animation-name: satellite_2;
-  animation-iteration-count: infinite;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-duration: 7s;
-  animation-duration: 7s;
+  opacity: 0;
 }
 .gallery_box {
   margin-left: auto;
@@ -331,97 +319,5 @@ body {
   }
   100% {
     opacity: 1;
-  }
-}
-@-webkit-keyframes satellite {
-  from {
-    -webkit-transform: rotate(400deg);
-  }
-  to {
-    -webkit-transform: rotate(40deg);
-  }
-}
-@-moz-keyframes satellite {
-  from {
-    -webkit-transform: rotate(400deg);
-    transform: rotate(400deg);
-  }
-  to {
-    -webkit-transform: rotate(40deg);
-    transform: rotate(40deg);
-  }
-}
-@-ms-keyframes satellite {
-  from {
-    -webkit-transform: rotate(400deg);
-    transform: rotate(400deg);
-  }
-  to {
-    -webkit-transform: rotate(40deg);
-    transform: rotate(40deg);
-  }
-}
-@-o-keyframes satellite {
-  from {
-    -webkit-transform: rotate(400deg);
-    transform: rotate(400deg);
-  }
-  to {
-    -webkit-transform: rotate(40deg);
-    transform: rotate(40deg);
-  }
-}
-@keyframes satellite {
-  from {
-    transform: rotate(400deg);
-  }
-  to {
-    transform: rotate(40deg);
-  }
-}
-@-webkit-keyframes satellite_2 {
-  from {
-    -webkit-transform: rotate(180deg);
-  }
-  to {
-    -webkit-transform: rotate(540deg);
-  }
-}
-@-moz-keyframes satellite_2 {
-  from {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  to {
-    -webkit-transform: rotate(540deg);
-    transform: rotate(540deg);
-  }
-}
-@-ms-keyframes satellite_2 {
-  from {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  to {
-    -webkit-transform: rotate(540deg);
-    transform: rotate(540deg);
-  }
-}
-@-o-keyframes satellite_2 {
-  from {
-    -webkit-transform: rotate(180deg);
-    transform: rotate(180deg);
-  }
-  to {
-    -webkit-transform: rotate(540deg);
-    transform: rotate(540deg);
-  }
-}
-@keyframes satellite_2 {
-  from {
-    transform: rotate(180deg);
-  }
-  to {
-    transform: rotate(540deg);
   }
 }
