--- a/views/include_public.ejs
+++ b/views/include_public.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="public/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="css/kit/tooltip.css"> -->
     <link rel="stylesheet" href="public/css/kit/animate.css">
+    <link rel="stylesheet" href="public/css/satellite.css">
     <link rel="stylesheet" href="public/css/unslider.css">
     <link rel="stylesheet" href="public/css/unslider-dots.css">
 
