--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,8 +55,8 @@
       </div>
 
       <div class="satellite_box">
-          <div class="satellite_1"></div>
-          <div class="satellite_2"></div>
+          <div class="satellite_1 animated_satellite_1 satellite_spin"></div>
+          <div class="satellite_2 animated_satellite_2 satellite_2_spin"></div>
 
 
                   <div class="gallery_box">
