--- a/public/less/main.less
+++ b/public/less/main.less
@@ -223,15 +223,19 @@ body{
 
   }
 
-  .pic_0{ background-image: url(../img/miao_0.jpg); 
+  .pic_0{ background-image: url(../img/croped/miao_00.png); 
           display: none;
         }
-  .pic_1{ background-image: url(../img/miao_1.jpg); }
-  .pic_2{ background-image: url(../img/miao_2.jpg); }
-  .pic_3{ background-image: url(../img/miao_3.jpg); }
-  .pic_4{ background-image: url(../img/miao_4.jpg); }
-  .pic_5{ background-image: url(../img/miao_5.jpg); }
-  .pic_6{ background-image: url(../img/miao_6.jpg); }
+  .pic_1{ background-image: url(../img/croped/miao_01.png); }
+  .pic_2{ background-image: url(../img/croped/miao_02.png); }
+  .pic_3{ background-image: url(../img/croped/miao_03.png); }
+  .pic_4{ background-image: url(../img/croped/miao_04.png); }
+  .pic_5{ background-image: url(../img/croped/miao_05.png); }
+  .pic_6{ background-image: url(../img/croped/miao_06.png); }
+  .pic_7{ background-image: url(../img/croped/miao_07.png); }
+  .pic_8{ background-image: url(../img/croped/miao_08.png); }
+  .pic_9{ background-image: url(../img/croped/miao_09.png); }
+  .pic_10{ background-image: url(../img/croped/miao_10.png); }
     
 }
 
