--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,6 +69,10 @@
                       <li><div class="pic_4 pic_grp"></li>
                       <li><div class="pic_5 pic_grp"></li>
                       <li><div class="pic_6 pic_grp"></li>
+                      <li><div class="pic_7 pic_grp"></li>
+                      <li><div class="pic_8 pic_grp"></li>
+                      <li><div class="pic_9 pic_grp"></li>
+                      <li><div class="pic_10 pic_grp"></li>
 
                       <!-- 本地端 -->
                       <!-- <li><img src="img/IMG_2691.jpg"></li>
