--- a/public/css/satellite.css
+++ b/public/css/satellite.css
@@ -2,14 +2,14 @@
 
 
 .animated_satellite_1 { 
-  -webkit-animation-duration: 15s;
-  animation-duration: 15s;
+  -webkit-animation-duration: 18s;
+  animation-duration: 18s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
-            animation-timing-function: linear;
+          animation-timing-function: linear;
 
 
 
@@ -17,14 +17,14 @@
 
 
 .animated_satellite_2 { 
-  -webkit-animation-duration: 7s;
-  animation-duration: 7s;
+  -webkit-animation-duration: 10s;
+  animation-duration: 10s;
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
   -webkit-animation-iteration-count: infinite;
   animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
-            animation-timing-function: linear;
+          animation-timing-function: linear;
 
 
 }
@@ -35,24 +35,24 @@
 //--------  satellite --------//
 
 @-webkit-keyframes satellite_spin {
-  from {
+  0% {
     -webkit-transform: rotate(400deg);
     transform: rotate(400deg);
   }
 
-  to {
+  100% {
     -webkit-transform: rotate(40deg);
     transform: rotate(40deg);
   }
 }
 
 @keyframes satellite_spin {
-  from {
+  0% {
     -webkit-transform: rotate(400deg);
     transform: rotate(400deg);
   }
 
-  to {
+  100% {
     -webkit-transform: rotate(40deg);
     transform: rotate(40deg);
   }
@@ -67,24 +67,24 @@
 //--------  satellite 2 --------//
 
 @-webkit-keyframes satellite_2_spin {
-  from {
+  0% {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
   }
 
-  to {
+  100% {
     -webkit-transform: rotate(540deg);
     transform: rotate(540deg);
   }
 }
 
 @keyframes satellite_2_spin {
-  from {
+  0% {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
   }
 
-  to {
+  100% {
     -webkit-transform: rotate(540deg);
     transform: rotate(540deg);
   }
