--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
 
     
       <div class="time_box">
-        <span class="time_text">2015.10.13</span>
+        <span class="time_text">date null</span>
 
       </div>
 
