--- a/views/include_public.ejs
+++ b/views/include_public.ejs
@@ -24,8 +24,11 @@
     <!-- <script type="text/javascript" src="js/kit/tooltip.js"></script> -->
     <script type="text/javascript" src="public/js/kit/jquery.preload.js"></script>
     <script type="text/javascript" src="public/js/kit/jquery.transit.min.js"></script>
+    
 
-    <script type="text/javascript" src="public/js/kit/jquery.mobile-1.4.5.min.js"></script>
+    <script type="text/javascript" src="public/js/kit/jquery.mobile.custom.min.js"></script>
+    
+    <script type="text/javascript" src="public/js/kit/jquery.mobile.custom.js"></script>
 
 
     <script type="text/javascript" src="public/js/kit/hide-address-bar.js"></script>
