--- a/public/less/main.less
+++ b/public/less/main.less
@@ -626,3 +626,31 @@ body{
 //   }
 // }
 
+//--------  RWD --------//
+
+
+
+//----若小於max-width都要顯示成這樣----//
+@media only screen and (max-width: 768px) {
+
+  .main_container{
+      top:70px;
+  }
+  
+  .satellite_box{
+
+    margin-top: 30px;
+    
+  }
+
+
+}
+
+//----介於之間都要顯示成這樣----//
+// @media (min-width:  px) and (max-width:  px) {}
+
+//----若大於min-width都要顯示成這樣----//
+// @media (min-width: 768px) {}
+
+
+
