--- a/public/css/satellite.css
+++ b/public/css/satellite.css
@@ -1,35 +1,35 @@
 
 
 
-.animated_satellite_1 { 
-  -webkit-animation-duration: 18s;
-  animation-duration: 18s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
+// .animated_satellite_1 { 
+//   -webkit-animation-duration: 18s;
+//   animation-duration: 18s;
+//   -webkit-animation-fill-mode: both;
+//   animation-fill-mode: both;
+//   -webkit-animation-iteration-count: infinite;
+//   animation-iteration-count: infinite;
+//   -webkit-animation-timing-function: linear;
+//           animation-timing-function: linear;
 
 
 
-}
+// }
 
 
-.animated_satellite_2 { 
-  -webkit-animation-duration: 10s;
-  animation-duration: 10s;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
+// .animated_satellite_2 { 
+//   -webkit-animation-duration: 10s;
+//   animation-duration: 10s;
+//   -webkit-animation-fill-mode: both;
+//   animation-fill-mode: both;
+//   -webkit-animation-iteration-count: infinite;
+//   animation-iteration-count: infinite;
+//   -webkit-animation-timing-function: linear;
+//           animation-timing-function: linear;
 
 
 
 
-}
+// }
 
 
 
@@ -72,10 +72,7 @@
   }
 }
 
-.satellite_spin {
-  -webkit-animation-name: satellite_spin;
-  animation-name: satellite_spin;
-}
+
 
 
 //--------  satellite 2 --------//
@@ -116,7 +113,27 @@
   }
 }
 
+
+
+
+.satellite_spin {
+  // -webkit-animation-name: satellite_spin;
+  // animation-name: satellite_spin;
+
+  -webkit-animation: satellite_2_spin 18s infinite linear;
+  animation: satellite_2_spin 18s infinite linear;
+
+
+}
+
 .satellite_2_spin {
-  -webkit-animation-name: satellite_2_spin;
-  animation-name: satellite_2_spin;
+  // -webkit-animation-name: satellite_2_spin;
+  // animation-name: satellite_2_spin;
+  
+
+  -webkit-animation: satellite_2_spin 10s infinite linear;
+  animation: satellite_2_spin 10s infinite linear;
+
+
+
 }
