really should work

--- a/public/less/main.less
+++ b/public/less/main.less
@@ -631,16 +631,16 @@ body{
 
 
 //----若小於max-width都要顯示成這樣----//
-@media only screen and (max-width: 768px) {
+@media screen and (max-width: 480px) {
 
   .main_container{
-      top:70px;
+      top:70px !important; 
   }
   
   .satellite_box{
 
-    margin-top: 30px;
-    
+    margin-top: 20px !important;
+
   }
 
 
