--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,24 @@
     <!-- <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"> -->
     
    
+    <style>
+    
+    @media screen and (max-width: 480px) {
 
+      .main_container{
+          top:70px; 
+      }
+      
+      .satellite_box{
+
+        margin-top: 30px;
+
+      }
+
+
+    }
+
+    </style>
  
 
     <title> Linksy </title>
@@ -55,8 +72,8 @@
       </div>
 
       <div class="satellite_box">
-          <div class="satellite_1 animated_satellite_1 satellite_spin"></div>
-          <div class="satellite_2 animated_satellite_2 satellite_2_spin"></div>
+          <div class="satellite_1 satellite_spin"></div>
+          <div class="satellite_2 satellite_2_spin"></div>
 
 
                   <div class="gallery_box">
