--- a/public/css/satellite.css
+++ b/public/css/satellite.css
@@ -1,35 +1,65 @@
 
 
 
-// .animated_satellite_1 { 
-//   -webkit-animation-duration: 18s;
-//   animation-duration: 18s;
-//   -webkit-animation-fill-mode: both;
-//   animation-fill-mode: both;
-//   -webkit-animation-iteration-count: infinite;
-//   animation-iteration-count: infinite;
-//   -webkit-animation-timing-function: linear;
-//           animation-timing-function: linear;
+.animated_satellite_1 { 
+  -webkit-animation-duration: 18s;
+  -moz-animation-duration: 18s;
+  -ms-animation-duration: 18s;
+  -o-animation-duration: 18s;
+  animation-duration: 18s;
 
 
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
 
-// }
-
-
-// .animated_satellite_2 { 
-//   -webkit-animation-duration: 10s;
-//   animation-duration: 10s;
-//   -webkit-animation-fill-mode: both;
-//   animation-fill-mode: both;
-//   -webkit-animation-iteration-count: infinite;
-//   animation-iteration-count: infinite;
-//   -webkit-animation-timing-function: linear;
-//           animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  -ms-animation-iteration-count: infinite;
+  -o-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 
 
 
 
-// }
+  -webkit-animation-timing-function: linear;
+  -moz-animation-timing-function: linear;
+  -ms-animation-timing-function: linear;
+  -o-animation-timing-function: linear;
+  animation-timing-function: linear;
+
+
+
+}
+
+
+.animated_satellite_2 { 
+  -webkit-animation-duration: 10s;
+  -moz-animation-duration: 10s;
+  -ms-animation-duration: 10s;
+  -o-animation-duration: 10s;
+  animation-duration: 10s;
+
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  
+  -webkit-animation-iteration-count: infinite;
+  -moz-animation-iteration-count: infinite;
+  -ms-animation-iteration-count: infinite;
+  -o-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  
+  
+  
+  -webkit-animation-timing-function: linear;
+  -moz-animation-timing-function: linear;
+  -ms-animation-timing-function: linear;
+  -o-animation-timing-function: linear;
+          animation-timing-function: linear;
+
+
+
+
+}
 
 
 
@@ -72,10 +102,69 @@
   }
 }
 
+.satellite_spin {
+  // -webkit-animation-name: satellite_spin;
+  // animation-name: satellite_spin;
 
+  -webkit-animation: satellite_spin 18s infinite linear;
+          animation: satellite_spin 18s infinite linear;
+}
 
 
 //--------  satellite 2 --------//
+@-o-keyframes satellite_2_spin {
+  0% {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(540deg);
+    -moz-transform: rotate(540deg);
+    -ms-transform: rotate(540deg);
+    -o-transform: rotate(540deg);
+    transform: rotate(540deg);
+  }
+}
+
+@-ms-keyframes satellite_2_spin {
+  0% {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(540deg);
+    -moz-transform: rotate(540deg);
+    -ms-transform: rotate(540deg);
+    -o-transform: rotate(540deg);
+    transform: rotate(540deg);
+  }
+}
+
+@-moz-keyframes satellite_2_spin {
+  0% {
+    -webkit-transform: rotate(180deg);
+    -moz-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    -o-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(540deg);
+    -moz-transform: rotate(540deg);
+    -ms-transform: rotate(540deg);
+    -o-transform: rotate(540deg);
+    transform: rotate(540deg);
+  }
+}
 
 @-webkit-keyframes satellite_2_spin {
   0% {
@@ -113,27 +202,11 @@
   }
 }
 
-
-
-
-.satellite_spin {
-  // -webkit-animation-name: satellite_spin;
-  // animation-name: satellite_spin;
-
-  -webkit-animation: satellite_2_spin 18s infinite linear;
-  animation: satellite_2_spin 18s infinite linear;
-
-
-}
-
 .satellite_2_spin {
-  // -webkit-animation-name: satellite_2_spin;
-  // animation-name: satellite_2_spin;
+  /* -webkit-animation-name: satellite_2_spin;
+  animation-name: satellite_2_spin; */
   
-
   -webkit-animation: satellite_2_spin 10s infinite linear;
   animation: satellite_2_spin 10s infinite linear;
-
-
-
+  
 }
