--- a/public/less/main.less
+++ b/public/less/main.less
@@ -138,7 +138,7 @@ body{
 
 
   //1大2小  
-  .satellite_1{
+  #satellite_1{
         
     display: block;
     position: absolute;
@@ -157,7 +157,7 @@ body{
     opacity: 0;
   }
 
-  .satellite_2{
+  #satellite_2{
     
       display: block;
       position: absolute;
