--- a/views/index.ejs
+++ b/views/index.ejs
@@ -72,8 +72,8 @@
       </div>
 
       <div class="satellite_box">
-          <div class="satellite_1 satellite_spin"></div>
-          <div class="satellite_2 satellite_2_spin"></div>
+          <div id="satellite_1" class="satellite_spin"></div>
+          <div id="satellite_2" class="satellite_2_spin"></div>
 
 
                   <div class="gallery_box">
