--- a/views/include_public.ejs
+++ b/views/include_public.ejs
@@ -3,7 +3,7 @@
     <link href='https://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 
 
-    <link rel="stylesheet" href="public/css/kit/jquery.mobile-1.4.5.min.css">
+    <!-- <link rel="stylesheet" href="public/css/kit/jquery.mobile-1.4.5.min.css"> -->
     <link rel="stylesheet" href="public/css/kit/bootstrap.min.css">
     <link rel="stylesheet" href="public/stylesheets/github-light.css">
     <link rel="stylesheet" href="public/css/font-awesome.min.css">
@@ -19,7 +19,9 @@
     
     
     <script type="text/javascript" src="public/js/modernizr.js"></script>
-    <script type="text/javascript" src="public/js/jquery.min.js"></script>
+    <!-- <script type="text/javascript" src="public/js/jquery.min.js"></script> -->
+
+    <script type="text/javascript" src="public/js/kit/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="public/js/kit/bootstrap.min.js"></script>
     <!-- <script type="text/javascript" src="js/kit/tooltip.js"></script> -->
     <script type="text/javascript" src="public/js/kit/jquery.preload.js"></script>
