--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,6 +26,28 @@
         margin-top: 30px;
 
       }
+      
+      .gallery_box{
+        
+        width: 250px;
+        height:250px;
+
+      }
+
+      .gallery_box li div{
+        
+        width: 250px;
+        height:250px;
+
+      }
+      
+      #satellite_1,#satellite_2{
+
+        display: none;
+        opacity: 0;
+
+      }
+
 
 
     }
